# saumil-ai-implementation-examples

./: .gitignore  README.md
agentic-production/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  vendors.md
agentic-production/tools/01-memory-and-planning/: agent-orchestration-platforms.md  graph-databases.md  vector-databases.md
agentic-production/tools/02-agent-planning-and-workflow/: multi-agent-coordination.md  workflow-orchestration.md
agentic-production/tools/03-prompt-and-agent-frameworks/: agent-framework-platforms.md  input-validation-and-safety.md  (+1 more)
chunking-strategies/: README.md
chunking-strategies/notebooks/: rag_chunking_strategies.ipynb
cohere-embed-v4-multimodal/: .gitignore  README.md  pyproject.toml
cohere-embed-v4-multimodal/notebooks/: Experimenting_with_CohereEmbedv4.ipynb
graph-rag/: README.md  pyproject.toml
graph-rag/src/advanced_graph_rag_investment_intelligence/: graph.ipynb  investment_kg_visualization.html
metadata-filtering/: 01_pinecone_metadata_filtering.ipynb  02_weaviate_metadata_filtering.ipynb  03_milvus_metadata_filtering.ipynb  04_qdrant_metadata_filtering.ipynb  README.md  milvus_demo.db  pyproject.toml
metadata-filtering/qdrant_storage/: raft_state.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/: config.json  payload_index.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/: newest_clocks.json  replica_state.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/0e6fbd75-aa39-4620-a3d8-30df49ac4f3d/: IDENTITY  LOG  MANIFEST-000005
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/0e6fbd75-aa39-4620-a3d8-30df49ac4f3d/payload_index/: IDENTITY  LOG  MANIFEST-000005  config.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/14c3de51-7622-4f04-8524-32730e60c285/: IDENTITY  LOG  MANIFEST-000005  mutable_id_tracker.mappings
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/14c3de51-7622-4f04-8524-32730e60c285/payload_index/: 000011.sst  000017.sst  000023.sst  000027.sst  000028.sst  000029.sst  IDENTITY  LOG  MANIFEST-000005  config.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/2e89332b-51fc-4130-bd3d-b99e02975e2e/: IDENTITY  LOG  MANIFEST-000005  segment.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/2e89332b-51fc-4130-bd3d-b99e02975e2e/payload_index/: IDENTITY  LOG  MANIFEST-000005  config.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/41b60c75-1388-4daa-8a9f-d5aac57854f9/: IDENTITY  LOG  MANIFEST-000005
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/41b60c75-1388-4daa-8a9f-d5aac57854f9/payload_index/: IDENTITY  LOG  MANIFEST-000005  config.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/8c48c658-3391-4076-a73c-cd7c353fb33e/: IDENTITY  LOG  MANIFEST-000005
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/8c48c658-3391-4076-a73c-cd7c353fb33e/payload_index/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000019  config.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/8c48c658-3391-4076-a73c-cd7c353fb33e/vector_storage/vectors/: config.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/976a20bb-fa0d-4c5f-8e93-87adb88311bf/: IDENTITY  LOG  MANIFEST-000005
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/976a20bb-fa0d-4c5f-8e93-87adb88311bf/payload_index/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000017  config.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/9df4b718-b7bb-4026-a38d-72bb13a7cfc1/: IDENTITY  LOG  MANIFEST-000005
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/9df4b718-b7bb-4026-a38d-72bb13a7cfc1/payload_index/: IDENTITY  LOG  MANIFEST-000005  config.json
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/de3a6af8-1a54-4726-8a51-9879d603f84d/: IDENTITY  LOG  MANIFEST-000005
metadata-filtering/qdrant_storage/collections/qdrant_product_catalog_v2/0/segments/de3a6af8-1a54-4726-8a51-9879d603f84d/payload_index/: IDENTITY  LOG  MANIFEST-000005  config.json
shared/: README_TEMPLATE.md
(+17 files in other folders)
