[project]
name = "cohere-embed-v4-multimodal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.15.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pdf2image>=1.17.0",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
