[project]
name = "metadata-filtering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pinecone>=6.0.2",
    "pymilvus>=2.5.8",
    "qdrant-client>=1.14.2",
    "weaviate-client>=4.14.1",
]
